--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "dnoegel/php-xdg-base-dir": "^0.1.1",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
