--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@babel/plugin-proposal-optional-chaining": "^7.21.0",
         "axios": "^0.18",
-        "browser-sync": "^2.26.7",
+        "browser-sync": "^2.29.1",
         "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "^5.1",
         "laravel-mix": "^4.0.7",
-        "lodash": "^4.17.5",
+        "lodash": "^4.17.21",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
@@ -31,8 +32,8 @@
         "bootstrap": "^4.6.0",
         "inputmask": "^5.0.5",
         "jquery": "^3.6.0",
-        "jquery-ui": "^1.12.1",
-        "moment": "^2.29.1",
+        "jquery-ui": "^1.13.2",
+        "moment": "^2.29.4",
         "morris.js": "^0.5.0",
         "raphael": "^2.3.0",
         "sweetalert2": "^9.10.12",
